--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -21,7 +21,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:malei0311/jsc.git"
+    "url": "git@github.com:malei0311/jsc.git",
+    "directory": "packages/shared"
   },
   "scripts": {
     "build": "NODE_ENV=production INPUT_FILE=src/index.ts rollup -c ../../rollup.config.mjs"
