fix: 🐛 fix missing dependency

--- a/packages/fluent/package.json
+++ b/packages/fluent/package.json
@@ -30,5 +30,7 @@
   "scripts": {
     "build": "NODE_ENV=production INPUT_FILE=src/index.ts rollup -c ../../rollup.config.mjs"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@jsc/shared": "^0.0.1"
+  }
 }
