chore: 🔧 change lerna allow branch

--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
   "version": "independent",
   "command": {
     "version": {
-      "allowBranch": ["master", "feature/*"],
+      "allowBranch": ["main", "feature/*"],
       "conventionalCommits": true
     },
     "publish": {
