--- a/packages/fluent/package.json
+++ b/packages/fluent/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jsc/fluent",
+  "name": "@x-jsc/fluent",
   "version": "0.1.0",
   "description": "a fluent api to jsc",
   "author": "malei0311 <leiman0311l@gmail.com>",
@@ -17,6 +17,7 @@
     "!lib/dts"
   ],
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
   "repository": {
@@ -31,6 +32,6 @@
     "build": "NODE_ENV=production INPUT_FILE=src/index.ts rollup -c ../../rollup.config.mjs"
   },
   "dependencies": {
-    "@jsc/shared": "^0.1.0"
+    "@x-jsc/shared": "^0.1.0"
   }
 }
