--- a/packages/static/tsconfig.json
+++ b/packages/static/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "lib",
     "declarationDir": "dts",
     "paths": {
-      "@jsc/*": ["../*/src"]
+      "@x-jsc/*": ["../*/src"]
     }
   },
   "exclude": ["tests", "lib"],
