--- a/platforms/darwin-x64/package.json
+++ b/platforms/darwin-x64/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@jsc/platform-darwin-x64",
+  "name": "@x-jsc/platform-darwin-x64",
   "version": "0.1.0",
   "description": "MacOS x64 binary for JSC",
   "author": "malei0311 <leiman0311l@gmail.com>",
   "homepage": "",
   "license": "MIT",
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
   "repository": {
